--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
      user-scalable=0' >
 	<meta http-equiv="ScreenOrientation" content="autorotate:disabled">
 	  
-    <title>PlaceMap_v1.01</title>
+    <title>PlaceMap_v1.02</title>
 	  
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>-->
     <script src="/socket.io/socket.io.js"></script>
 	  
-	<!--<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="reset.css">
 	<script type="text/javascript" src="jquery.js"></script>
 	<script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
@@ -23,7 +23,7 @@
 	<link rel="apple-touch-icon" href="img/icon.png" />
 	<link rel="apple-touch-icon" sizes="72x72" href="img/icon.png" />
 	<link rel="apple-touch-icon" sizes="114x114" href="img/icon.png" />
-	<link rel="apple-touch-icon" sizes="144x144" href="img/icon.png" /> --> 
+	<link rel="apple-touch-icon" sizes="144x144" href="img/icon.png" /> 
 	  
   </head>
   <body>
