--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="reset.css">
 	<script type="text/javascript" src="jquery.js"></script>
-	<script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+	<script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
 	<script type="text/javascript" src="javascript.js"></script>
 	
 	<link rel="shortcut icon" href="img/icon.png" />
