--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
      user-scalable=0' >
 	<meta http-equiv="ScreenOrientation" content="autorotate:disabled">
 	  
-    <title>PlaceMap_v1.05</title>
+    <title>PlaceMap_v1.01</title>
 	  
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
+	<script type="text/javascript" src="javascript2.js"></script> 
+	  
 	  
 	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="reset.css">
