--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
      user-scalable=0' >
 	<meta http-equiv="ScreenOrientation" content="autorotate:disabled">
 	  
-    <title>PlaceMap_v1.02</title>
+    <title>PlaceMap_v1.03</title>
 	  
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
-	<script type="text/javascript" src="javascript2.js"></script> 
+	<script type="text/javascript" src="/javascript2.js"></script> 
 	  
 	  
 	<link rel="stylesheet" href="style.css">
