--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	  
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
-	<script type="text/javascript" src="/javascript2.js"></script> 
+	<script src="/javascript2.js"></script> 
 	  
 	  
 	<link rel="stylesheet" href="style.css">
