--- a/index.html
+++ b/index.html
@@ -7,18 +7,16 @@
      user-scalable=0' >
 	<meta http-equiv="ScreenOrientation" content="autorotate:disabled">
 	  
-    <title>PlaceMap_v1.05</title>
+    <title>PlaceMap_v1.06</title>
 	  
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
-	<script src="/javascript2.js"></script> 
-	  
 	  
 	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="reset.css">
 	<script type="text/javascript" src="jquery.js"></script>
 	<script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
-	<script type="text/javascript" src="javascript.js"></script>
+	<script type="text/javascript" src="http://www.ferranaltarriba.com/placemap/javascript.js"></script>
 	
 	<link rel="shortcut icon" href="img/icon.png" />
 	<link rel="apple-touch-icon" href="img/icon.png" />
