--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
      user-scalable=0' >
 	<meta http-equiv="ScreenOrientation" content="autorotate:disabled">
 	  
-    <title>PlaceMap_v1.06</title>
+    <title>PlaceMap_v1.07</title>
 	  
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
@@ -16,7 +16,7 @@
 	<link rel="stylesheet" href="reset.css">
 	<script type="text/javascript" src="jquery.js"></script>
 	<script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
-	<script type="text/javascript" src="http://www.ferranaltarriba.com/placemap/javascript.js"></script>
+	<script type="text/javascript" src="javascript.js"></script>
 	
 	<link rel="shortcut icon" href="img/icon.png" />
 	<link rel="apple-touch-icon" href="img/icon.png" />
@@ -115,5 +115,6 @@
 	});	
 		
     </script>
+	<script type="text/javascript">alert("hello");</script>  
   </body>
 </html>
