--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>PlaceMap v1.07</title>
+    <title>PlaceMap v1.08</title>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
-	  <script src = "/javascript.js" /></script>
+	  <script src = "/javascript.js"></script>
   </head>
   <body>
 	<!-- Room code mechanism -->  
