--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>PlaceMap v1.02</title>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
+	  <script src="public/javascript.js"></script>
   </head>
   <body>
 	<!-- Room code mechanism -->  
