--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
         ws.close();
       }
 
-      ws = new WebSocket('ws://localhost:6969');
+      var HOST = location.origin.replace(/^http/, 'ws')
+	  ws = new WebSocket(HOST);
       ws.onopen = () => {
         console.log('Connection opened!');
       }
